# image-rating-server

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .env.test  pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  main.py  mcp_server.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: ai_analyze.py  ai_prompts.py  auth.py  images.py  upload.py  users.py
backend/app/core/: __init__.py  config.py  database.py  logger.py  security.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  ai_model.py  ai_prompt.py  analysis_result.py  image.py  rating.py  user.py
backend/app/schemas/: __init__.py  analyze.py  batch.py  image.py  token.py  upload.py  user.py
backend/app/services/: __init__.py  analysis_result.py  auth.py  auto_analyze.py  concurrent_analyze.py  concurrent_upload.py  image.py  image_upload.py  storage.py  user.py
backend/app/services/ai/: __init__.py  base.py  bootstrap.py  prompt_store.py  registry.py  schemas.py  store.py
backend/app/services/ai/models/: __init__.py
backend/app/services/ai/models/nima/: __init__.py  analyzer.py  model.py
backend/app/services/ai/models/qwen_vl/: __init__.py  analyzer.py
backend/app/utils/: id.py
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/api/v1/: test_ai_analyze.py  test_ai_prompts.py  test_auth.py  test_upload.py  test_upload_auto_analyze.py
backend/tests/cli/: test_cli.py
backend/tests/core/: test_database_migrations.py
docs/: README.md
docs/api/: README.md  api-overview.md
docs/architecture/: README.md  qwen3-vl-prompt-management.md  system-overview.md
docs/changes/: 2026-03-09-qwen3-vl-prompt-management.md  README.md
docs/development/: README.md  cli-usage.md  commands.md  conventions.md  environment.md  how_to_use_skills.md  mcp-server.md
docs/features/: README.md
docs/features/qwen3-vl/: README.md  prompt-management.md  ui-layout-update.md
docs/project/: README.md  project-overview.md
docs/runbooks/: README.md  local-development.md  release-checklist.md
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/e2e/: api.spec.ts  auth.spec.ts  dashboard.spec.ts  visual.spec.ts
frontend/src/: middleware.ts  providers.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/ai-analyze/: page.tsx
frontend/src/app/dashboard/images/: page.tsx
frontend/src/app/dashboard/upload/: page.tsx
frontend/src/components/: api-initializer.tsx  index.ts
frontend/src/components/auth/: index.ts  login-form.tsx  logout-button.tsx  register-form.tsx
frontend/src/components/layout/: footer.tsx  header.tsx  index.ts  sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  index.ts  input.tsx  label.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-auth.ts  use-toast.ts
frontend/src/lib/: api.ts  auth.config.ts  auth.ts  image-url.ts  route-params.ts  upload-persistence.ts  utils.ts
frontend/src/providers/: query-provider.tsx  theme-provider.tsx
frontend/src/store/: auth-store.ts
frontend/src/types/: index.ts  next-auth.d.ts
scripts/: deploy.sh  dev.bat  dev.sh  init-db.bat  init-db.sh  test-upload.bat  test-upload.sh
skills/image-rating-server/: SKILL.md  check-env.sh
(+10 files in other folders)
