[project]
name = "image-rating-server"
version = "0.1.0"
description = "Enterprise-level image rating API server with FastAPI"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "email-validator>=2.1.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "click>=8.0.0",
    "torch>=2.0.0,<2.3.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchvision>=0.15.0,<0.18.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchvision>=0.15.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "aiofiles>=24.1.0",
    "openai>=2.26.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.9.0",
    "types-aiofiles>=25.1.0.20251011",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
irs = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore-missing-imports = true

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
